--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsup",
+    "test": "mocha \"**/*.test.ts\" --retries 2",
     "typecheck": "tsc --noEmit",
     "format:check": "prettier --check \"**/*.{ts,md}\"",
     "format": "prettier --write .",
-    "prepublishOnly": "pnpm run format:check && pnpm run typecheck && pnpm run build"
+    "prepublishOnly": "pnpm test && pnpm run format:check && pnpm run typecheck && pnpm build"
   },
   "type": "module",
   "packageManager": "pnpm@8.12.0",
