--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-netkit",
   "description": "Awesome utilities for working with network on Linux",
-  "version": "0.1.0-canary.0",
+  "version": "0.1.0-canary.1",
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsup",
@@ -29,31 +29,31 @@
     "type-fest": "^4.14.0",
     "typescript": "^5.4.3"
   },
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
+  "types": "dist/index.d.cts",
   "files": [
     "dist/**"
   ],
   "exports": {
     ".": {
       "import": {
-        "types": "./dist/index.d.mts",
-        "default": "./dist/index.mjs"
-      },
-      "require": {
         "types": "./dist/index.d.ts",
         "default": "./dist/index.js"
+      },
+      "require": {
+        "types": "./dist/index.d.cts",
+        "default": "./dist/index.cjs"
       }
     },
     "./ip": {
       "import": {
-        "types": "./dist/ip.d.mts",
-        "default": "./dist/ip.mjs"
+        "types": "./dist/ip/index.d.ts",
+        "default": "./dist/ip/index.js"
       },
       "require": {
-        "types": "./dist/ip.d.ts",
-        "default": "./dist/ip.js"
+        "types": "./dist/ip/index.d.cts",
+        "default": "./dist/ip/index.cjs"
       }
     }
   },
