--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "tsup",
     "test": "mocha \"**/*.test.ts\" --retries 2",
     "typecheck": "tsc --noEmit",
+    "lint": "eslint \"src/**/*.ts\"",
+    "lint:fix": "eslint --fix \"src/**/*.ts\"",
     "format:check": "prettier --check \"**/*.{ts,md}\"",
     "format": "prettier --write .",
-    "prepublishOnly": "pnpm test && pnpm run format:check && pnpm run typecheck && pnpm build"
+    "prepublishOnly": "pnpm test && pnpm lint && pnpm run format:check && pnpm run typecheck && pnpm build"
   },
   "type": "module",
   "packageManager": "pnpm@8.15.0",
@@ -21,7 +23,9 @@
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.12.2",
     "@types/prompts": "^2.4.9",
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
     "chai": "^5.1.0",
+    "eslint": "^8.57.0",
     "mocha": "^10.4.0",
     "prettier": "^3.2.5",
     "tsup": "^8.0.2",
